--- a/intro.tex
+++ b/intro.tex
@@ -19,7 +19,7 @@ On the other hand, \citet{cibulka1994shin} presented a case study of a patient w
 
 \subsection{Are there observable biomechanical differences between running styles that may reduce the risk of shin splints?}
 
-My guiding research question is, what relevant and quantitaive biomechanics observations can I make regarding between running styles?  While the global COVID-19 pandemic limited my access to lab instrumentation, studies of human running gait and biomechanics historically made use of clever improvised methods to provide insight \citep{baker2007history, mcmahon1984muscles, mayer2010physiological, marey1873locomotion, carlet1872essai, muybridge1901human}. In particular, early studies made clever use of photography \citep{muybridge1901human, baker2007history, mcmahon1984muscles, mayer2010physiological} and wearable instrumentation \citep{marey1873locomotion, carlet1872essai, baker2007history, mayer2010physiological}. The wearable instrumentation available to early researchers (\fref{fig:intro}) included the kymograph, in which movement of limbs or pressure of the feet were use to actuate a stylus and inscribe records of force or motion, for example, on a soot blackened glass slide or cylinder. More modern versions of this instrumentation have been used as a cheap way to record maximal flows and forces using instrumentation deployed in the intertidal zone in heavy California surf \citep{bell1984quantifying, denny1983simple}.
+My guiding research question is, what relevant and quantitaive biomechanics observations can I make regarding between running styles?  While the global COVID-19 pandemic limited my access to lab instrumentation, studies of human running gait and biomechanics historically made use of clever improvised methods to provide insight \citep{baker2007history, mcmahon1984muscles, mayer2010physiological, marey1873locomotion, carlet1872essai, muybridge1901human}. In particular, early studies made groundbreaking use of photography \citep{muybridge1901human, baker2007history, mcmahon1984muscles, mayer2010physiological} and wearable instrumentation \citep{marey1873locomotion, carlet1872essai, baker2007history, mayer2010physiological}. The wearable instrumentation available to early researchers (\fref{fig:intro}) included the kymograph, in which movement of limbs or pressure of the feet, transmitted via tubes or mechanical linkages, were use to actuate a stylus and inscribe records of force or motion, for example, on a soot blackened glass slide or cylinder. More modern versions of this instrumentation have been used as a cheap way to record maximal flows and forces for instrumentation deployed in the intertidal zone in heavy California surf \citep{bell1984quantifying, denny1983simple}.
 \begin{figure}
 \begin{center}
 \includegraphics[height=1.5in]{figures/intro3.png}\hspace{0.5in}
