--- a/trombetta.bib
+++ b/trombetta.bib
@@ -9,9 +9,8 @@ pages={1845--2022}}
 @misc{lieberman2020biomechanical,
 author={Lieberman, Dan},
 year={2020},
-howpublished={website},
-url={{http://barefootrunning.fas.harvard.edu/4BiomechanicsofFootStrike.html}},
-note={date accessed 29 Apr 2020}}
+howpublished={{http://barefootrunning.fas.harvard.edu/4BiomechanicsofFootStrike.html}, accessed on 29 Apr 2020}
+}
 
 @article{bramble2004endurance,
 author={Bramble, Dennis M and Lieberman, Daniel E},
