--- a/methods.tex
+++ b/methods.tex
@@ -48,7 +48,7 @@ To examine changes in kinematics and gait during the different running styles, I
 
 Kinematic analysis proceeded using \citet{hedrick2008software} \lstinline{DLTdv8} (\url{http://biomech.web.unc.edu/dltdv/}) to manually digitize six points (\fref{fig:methods:kinematics}) in each frame of video: (1) left toe at the front of the white sole; (2) left heel at the back of the white sole; (3) left ankle at the lateral malleolus as judged by white ankle socks worn by the subject; (4) left knee as judged by the bump from the lateral condyles of the femur and tibia; (5) left hip as judged from a faint stripe marking on the subject's athletic shorts. In addition, a sixth point, the right toe, was also digitized in order to confirm that the left-right phase was \ang{90}. 
 
-Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. The joint angle definitions followed those used in previous human locomotion studies \citep{qiao2016leg, giandolini2013impact, larson2014comparison, hamner2010muscle, liu2008muscle, dickinson1985measurement, mcmahon1984muscles}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. As a sanity check, the joint angles I observed were similar to those in high speed walking \citep{liu2008muscle}. I attempted to fit these to a periodic function using Fourier series but found a large number of terms was needed and that the fits achieved were mediocre; a means of decomposing a piecewise continuous time series for joint angles (due to the discontinuous nature of stance and swing in bipedal and polypedal locomotion) is needed. 
+Specially written code in \Matlab\ was used to convert the digitized point locations into the joint angles depicted in \fref{fig:methods:kinematics}. The joint angle definitions followed those used in previous human locomotion studies \citep{qiao2016leg, giandolini2013impact, larson2014comparison, hamner2010muscle, liu2008muscle, dickinson1985measurement, mcmahon1984muscles}. Foot angle ($\alpha$) was defined with \ang{0} as anatomically neutral position, positive $\alpha$ as dorsiflexion, and negative $\alpha$ as plantar flexion. The knee angle ($\beta$) was defined with \ang{0} as anatomically neutral position, and positive $\beta$ as knee flexion. Hip angle ($\gamma$) was defined with \ang{0} as anatomically neutral position, positive $\gamma$ as flexion, and negative $\gamma$ as extension. As a sanity check, the joint angles I observed were similar to those in high speed walking \citep{liu2008muscle}. I attempted to fit these to a periodic function using Fourier series but found a large number of terms was needed and that the fits achieved were mediocre; a means of decomposing a piecewise continuous time series for joint angles (due to the non-smooth nature of intermittent contact, stance and swing in bipedal and polypedal locomotion) is needed. 
 
 In addition to joint angle, phase was recovered using a method based on the Phaser algorithm \citep{revzen2008estimating}, by taking the principal component analysis (PCA) of all the six digitized points' $x$ and $y$ coordinates, then finding the phase angle of the Hilbert transform of the first principal component (PC1). The phase was then adjusted to range from 0 to $2\pi$ \citep{revzen2009towards}, with 0 phase corresponding to the beginning of the first recorded stance phase. This allows comparison of each of the 17 and 21 steps in the heel-strike and forefoot-strike analysis videos, respectively. Phase calculations were carried out in \Matlab\ and made use of the \lstinline{pca} and \lstinline{hilbert} functions. 
 % can we get how much of variance covered in PC1,2 components? 
