--- a/trombetta.bib
+++ b/trombetta.bib
@@ -147,7 +147,7 @@ publisher={Dover}}
 @article{carlet1872essai,
 author={Carlet, Gaston},
 year={1872},
-title={Essai expe{\'{e}}rimentale sur la locomotion humaine},
+title={Essai exp{\'{e}}rimentale sur la locomotion humaine},
 journal={Annales des Sciences Naturelles Zoologie},
 volume={15}}
 
