--- a/intro.tex
+++ b/intro.tex
@@ -4,7 +4,7 @@
 
 %What is shin splint? 
 %To study the effectiveness and injury risk of heel strike versus forefoot strike running.
-\citet{slocum1967shin} medically described shin splints as a symptom complex characterized by pain and discomfort in the lower leg after repetitive overuse in walking or running. The usual sites of pain are the lower half of the posteromedial border of the tibia, the anterior tibial compartment, the tibia, and the interosseous membrane; other additional technical details are provided to distinguish it from stress fractures, anterior tibial syndrome, and muscle hernia \citep{slocum1967shin}. As a midshipman in my first year at the United States Naval Academy, I am acutely familiar with repetitive overuse of the lower leg in waking and running, which motivates me to understand how biomechanics may play a role in avoiding shin splints. 
+\citet{slocum1967shin} medically described shin splints as a symptom complex characterized by pain and discomfort in the lower leg after repetitive overuse in walking or running. The usual sites of pain are the lower half of the posteromedial border of the tibia, the anterior tibial compartment, the tibia, and the interosseous membrane; other additional technical details are provided to distinguish it from stress fractures, anterior tibial syndrome, and muscle hernia \citep{slocum1967shin}. As a midshipman in my first year at the United States Naval Academy, I am acutely familiar with repetitive overuse of the lower leg in walking and running, which motivates me to understand how biomechanics may play a role in avoiding shin splints. 
 
 \subsection{Potential for running style to reduce risk of shin splints}
 %Explain heel strike versus forefoot strike
