--- a/trombetta.tex
+++ b/trombetta.tex
@@ -43,7 +43,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-The goal of my research was to study the effectiveness and injury risk of heel strike versus forefoot strike running. Medical literature suggests adoption of forefoot strike running can reduce risk of injury, and I wished to examine why. Due to the global COVID-19 pandemic, I improvised a flexure-based force plate kymograph to provide crude measurements of vertical ground reaction force (GRF) during each running style. I also used a smartphone as a wearable accelerometer to obtain body accelerations during each running style. Finally, I used a smartphone camera to perform kinematic analysis of each running style while running on a treadmill. I found that while the two running styles did not appear to have grossly different overall vertical forces and accelerations, the kinematics data suggest fine scale differences, especially around the instant of contact with the ground, that could affect compressive loads in the lower leg. Forefoot strike may produce larger horizontal ground reaction forces on pushoff, while heel strikes may produce larger, more instantaneous impacts that have higher potential to cause injury, compared to a more spread out force enabled by compliant gaits like a forefoot strike.  
+The goal of my research was to study the effectiveness and injury risk of heel strike versus forefoot strike running. Medical literature suggests adoption of forefoot strike running can reduce risk of injury, specifically, shin splints, and I wished to examine why. Due to the global COVID-19 pandemic, I improvised a flexure-based force plate kymograph to provide crude measurements of vertical ground reaction force (GRF) during each running style. I also used a smartphone as a wearable accelerometer to obtain body accelerations during each running style. Finally, I used a smartphone camera to perform kinematic analysis of each running style while running on a treadmill. I found that while the two running styles did not appear to have grossly different overall vertical forces and accelerations, the kinematics data suggest fine scale differences, especially around the instant of contact with the ground, that could affect compressive loads in the lower leg. Forefoot strike may produce larger horizontal ground reaction forces on pushoff, while heel strikes may produce larger, more instantaneous impacts that have higher potential to cause injury, compared to a more spread out force enabled by compliant gaits like a forefoot strike.  
 \end{abstract}
 {\scriptsize\textbf{Keywords: }shin splints, running, kinematics, ground reaction forces, kymograph}
 
